--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "chat-app",
   "version": "1.0.0",
   "main": "server.js",
-  "type":"commonjs",
+  "type":"module",
   "scripts": {
     "start": "nodemon back-end/server.js"
   },
