--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "chat-app",
   "version": "1.0.0",
   "main": "server.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
-    "start": "nodemon back-end/server.js"
+    "start": "node back-end/server.js",
+    "dev": "nodemon back-end/server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
